# John-Purcell-cpp-course

./: .clang-format  README.md  bind.cpp  custom_objects_as_map_keys.cpp  custom_objects_as_map_values.cpp  decltype_and_typeid.cpp  enhanced_for_loop.cpp  multimap.cpp  sets.cpp  stacks_and_queues.cpp  the_auto_keyword.cpp  two_dimensional_vectors.cpp  vectors.cpp
casting/: perfect_forwarding.cpp  reinterpret_cast.cpp  static_cast.cpp
cmake/: readme.md
cmake/Canonical_Project_Structure/: CMakeLists.txt  README.md
cmake/Canonical_Project_Structure/src/: CMakeLists.txt
cmake/Canonical_Project_Structure/src/matrix/: matrix.hpp
cmake/Canonical_Project_Structure/src/student/: student.cpp
cmake/Introduction_to_CMake_by_Example/helloworld/: CMakeLists.txt  Student.cpp  helloworld.cpp
cmake/Introduction_to_CMake_by_Example/student/: CMakeLists.txt  mainapp.cpp
cmake/Introduction_to_CMake_by_Example/student/src/: CMakeLists.txt  Student.h
cmake/student/: CMakeLists.txt
cmake/studentlib_static/: CMakeLists.txt
cmake/usestudentlib/: CMakeLists.txt
code_analysis_valgrind/: leaky.cpp  not_leaky.cpp
cpp11_features/: c++11_initialization.cpp  initializer_lists.cpp
cpp11_features/casting/: dynamic_casts.cpp  static_cast.cpp
cpp11_features/initialization/: c++98_initialization.cpp  object_initialization.cpp
cpp11_features/iterable_classes/: iterable_classes.cpp
exceptions/: basic_exceptions.cpp
introducing_lambda_expressions/: functional_types.cpp  introducing_lambda_expressions.cpp  lambda_parameters_and_return_type.cpp  mutable_lambdas.cpp
iterable_classes/: Ring.h
more_about_constructors/: constructors_and_assignment_operators.cpp  elision_and_optimization.cpp  lvalue_and_rvalue_references.cpp  lvalue_references.cpp  rvalue_references.cpp
more_about_smart_pointers/: shared_pointers.cpp  singly_linked_list_unique_pointers.cpp  unique_pointers.cpp
multiple_inheritance/: multiple_inheritance.cpp
multithreading/: 00_basic_multithreading.cpp  01_shared_data.cpp  02_mutexes.cpp  03_function_arguments.cpp  04_lock_guards.cpp  05_threads_with_callable_objects.cpp  06_calculating_pi.cpp  07_promises_and_futures.cpp  08_promises_and_exceptions.cpp  09_packaged_tasks.cpp  10_waiting_for_threads.cpp  11_condition_variables.cpp  12_checking_condition_shared_resources.cpp  13_using_methods_in_threads.cpp  14_containers_and_thread_safety.cpp  15_producer_consumer.cpp  16_a_blocking_queue.cpp  17_async.cpp  18_hardware_concurrency.cpp  19_launching_lots_of_threads.cpp  20_a_thread_pool.cpp  21_distributing_work_between_cores.cpp  22_timing_code.cpp
operator_overloading/: Complex.cpp  Complex.h  complex_number_class.cpp  overload_assignment_operator.cpp  overload_comparison_operators.cpp  overload_dereference_operator.cpp  overload_left_bit_shift_operator_for_printing.cpp  overload_plus.cpp
passing_functions_to_functions/: abstract_classes_and_pure_virtual_functions.cpp  function_pointers.cpp  functors.cpp  object_slicing_and_polymorphism.cpp  using_function_pointers.cpp
project_drawing_fractal_images/: CMakeLists.txt
project_drawing_fractal_images/include/: Bitmap.h  BitmapFileHeader.h  BitmapInfoHeader.h  FractalCreator.h  Mandelbrot.h  RGB.h  Zoom.h  ZoomList.h
project_drawing_fractal_images/src/: Bitmap.cpp  FractalCreator.ccpp  FractalCreator.cpp  Mandelbrot.cpp  RGB.cpp  ZoomList.cpp  fractal.cpp  main.cpp
read_write_files/: binary_files.cpp  parse_text_in_files.cpp  test.txt
ring_buffer/: Ring.h
standard_template_library/: lists.cpp  maps.cpp  sorting_vectors.cpp  stacks_and_queues.cpp  stl_complex_data_types.cpp  vectors_and_memory.cpp
template_classes_and_functions/: pass_array_to_template_function.cpp  template_classes.cpp  template_functions.cpp  template_functions_and_type_inference.cpp
(+20 files in other folders)
